--- a/css/style.css
+++ b/css/style.css
@@ -223,14 +223,28 @@ p {
     border-radius: 50%;
     border: 15px solid var(--dark-light);
     box-shadow: var(--shadow);
+    background-color: var(--white-light);
+    overflow: hidden;
+}
+
+.home-img .home-img-inner {
+    overflow: hidden;
 }
 
 .home-img .home-img-inner img {
-    border-radius: 50%;
+    /* border-radius: 50%; */
+    transform: scale(0.93) translateY(-50px);
+    object-fit: cover;
 }
 
 .home .home-text .home-text-inner {
     max-width: 550px;
+}
+
+@media (max-width: 768px) {
+    .home-img .home-img-inner img {
+        transform: scale(0.9) translateY(-30px);
+    }
 }
 
 .home-text span {
@@ -443,6 +457,11 @@ p {
     transition: all 1s ease;
 }
 
+.ml12 .letter {
+    display: inline-block;
+    /* line-height: 1em; */
+}
+
 .page-loader-inner {
     width: 100%;
     height: 100%;
@@ -479,7 +498,7 @@ p {
     right: -50%;
 }
 
-.page-loader.hide .circle {
+.page-loader.hide .spinner {
     opacity: 0;
     transition: all 0.2s;
 }
@@ -499,18 +518,30 @@ p {
     z-index: 1;
 }
 
-@keyframes loader {
-    0% {
-        transform: scale(0.7);
-        box-shadow: 0 0 0 0 rgba(9, 214, 156, 0.7);
-    }
-    70% {
-        transform: scale(1);
-        box-shadow: 0 0 0 80px rgba(9, 214, 156, 0);
-    }
-    100% {
-        transform: scale(1);
-        box-shadow: 0 0 0 0 rgba(9, 214, 156, 0);
+.page-loader-inner .spinner {
+    width: 40px;
+    height: 40px;
+    background-color: var(--main-color);
+    z-index: 1;
+    animation: sk-rotateplane 1.2s infinite ease-in-out;
+}
+
+@-webkit-keyframes sk-rotateplane {
+    0% { -webkit-transform: perspective(120px) }
+    50% { -webkit-transform: perspective(120px) rotateY(180deg) }
+    100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
+  }
+  
+  @keyframes sk-rotateplane {
+    0% { 
+      transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+      -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg) 
+    } 50% { 
+      transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+      -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg) 
+    } 100% { 
+      transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+      -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
     }
 }
 
