Added padding to navbar

--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,7 @@ p {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 40px 0;
+    padding: 40px 15px;
 }
 
 .navbar-nav {
