--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,22 +1,86 @@
+a {
+    text-decoration: none;
+    color: var(--white-light);
+}
+
+.portfolio-items {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .portfolio-item {
-    position: relative;
-    overflow: hidden;
-    width: calc((100% / 3) - 12px);
-    margin: 10px 6px;
-    border-radius: 10px;
-    max-height: 200px;
+    width: calc((100% / 3) - 30px);
+    min-height: 50px;
+    margin: 0 15px 30px;
+    padding: 30px;
+    background-color: var(--dark-tint);
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
 }
 
-.portfolio-item img {
-    width: 100%;
-    max-width: 100%;
-    object-fit: contain;
+.portfolio-item:hover {
+    transform: translateY(-10px);
 }
 
-.portfolio-item .project-name {
-    position: absolute;
+.portfolio-item header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+   
 }
 
-.portfolio-item .project-type {
-    position: absolute;
+.folder-icon {
+    color: var(--main-color);
+    width: 32px;
+    height: 32px;
+}
+
+.portfolio-description {
+    display: none;
+}
+
+.p-title {
+    color: #fff;
+    font-size: 20px;
+    margin: 30px 0 10px;
+}
+
+.p-description {
+    margin-bottom: auto;
+    font-size: 14px;
+    line-height: 24px;
+}
+
+.portfolio-item footer {
+    margin-top: auto !important;
+}
+
+.tech-stack {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px 0 0;
+}
+
+.tech-stack-item {
+    font-size: 12px;
+    margin-right: 15px;
+    opacity: 0.6;
+}
+
+
+
+@media (max-width: 991px) {
+    .portfolio-item {
+        width: calc(50% - 30px);
+    }
+}
+
+@media (max-width: 767px) {
+    .portfolio-item {
+        width: 100%;
+        margin: 0 0 30px;
+    }
 }
