--- a/css/utilities.css
+++ b/css/utilities.css
@@ -49,6 +49,22 @@
     width: 50%;
 }
 
+.mr-2 {
+    margin-right: 10px;
+}
+
+.ml-2 {
+    margin-left: 10px;
+}
+
+.mb-3 {
+    margin-bottom: 10px;
+}
+
+.mb-5 {
+    margin-bottom: 20px;
+}
+
 .section-padding {
     padding: 20px 0;
 }
@@ -89,5 +105,13 @@
 
     .container {
         padding: 0 20px;
+    }
+    
+    .page-title {
+        padding: 25px 0;
+    }
+
+    .page-title h1 {
+        font-size: 40px;
     }
 }
