--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -3,6 +3,20 @@ a {
     color: var(--white-light);
 }
 
+.p-row {
+    display: flex;
+}
+
+.w-50 {
+    width: calc(50% - 20px);
+}
+
+@media (max-width: 768px) {
+    .w-50 {
+        width: calc(50% - 5px);
+    }
+}
+
 .portfolio-items {
     display: flex;
     flex-wrap: wrap;
@@ -38,7 +52,7 @@ a {
     height: 32px;
 }
 
-.portfolio-description {
+.portfolio-render-data {
     display: none;
 }
 
@@ -131,7 +145,7 @@ a {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: var(--dark-light);
+    background-color: var(--dark);
 }
 
 .pp-overlay.prev,
@@ -190,6 +204,10 @@ a {
     transition: all 0.5s ease 0.5s;
 }
 
+.pp-title {
+    color: var(--white);
+}
+
 .pp-header {
     display: flex;
     align-items: center;
@@ -208,6 +226,10 @@ a {
     background-color: var(--dark-light);
     margin-left: 10px;
     cursor: pointer;
+}
+
+.pp-header button.hidden {
+    display: none;
 }
 
 .pp-header .btn-icon {
