--- a/css/utilities.css
+++ b/css/utilities.css
@@ -1,6 +1,7 @@
 :root {
     --main-color: #09d69c;
     --white-light: #d5d5d5;
+    --white: #fff;
     --dark-dark: #252525;
     --dark-tint: #333333;
     --dark: #222222;
@@ -9,7 +10,7 @@
 }
 
 .container {
-    max-width: 1100px;
+    max-width: 1260px;
     padding: 0 20px;
     margin: 0 auto;
 }
