--- a/css/style.css
+++ b/css/style.css
@@ -380,9 +380,7 @@ p {
 }
 
 .fun-fact-item:hover {
-    transform: rotateY(30deg);
-    perspective: 150px;
-    box-shadow: 10px 0 5px 0 rgba(0, 0, 0, 0.1);
+    transform: translateY(-10px);
 }
 
 .fun-fact-item i {
