--- a/css/utilities.css
+++ b/css/utilities.css
@@ -72,7 +72,7 @@
 
 .page-title {
     background-color: var(--dark-dark);
-    padding: 50px 0;
+    padding: 45px 0;
     border-top: 2px solid var(--dark-tint);
     border-bottom: 2px solid var(--dark-tint);
     margin-bottom: 40px;
@@ -81,7 +81,7 @@
 
 .page-title h1 {
     font-size: 45px;
-    color: var(--white-light);
+    color: var(--white);
     font-weight: 600;
     text-align: left;
     margin-right: auto;
