--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -92,7 +92,7 @@ a {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     z-index: 999;
     visibility: hidden;
 }
